Fixed issue where collapsable nav was not showing

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ nav.navbar.navbar-view-blend {
 	top:0px;
     height: 260px;
     padding: 8px 100px;
-    z-index:9999;
+    z-index: 1040;
 
     -webkit-transition: background-color 0.3s,
                         height 0.8s,
@@ -118,8 +118,8 @@ nav.navbar.navbar-view-static {
     border-bottom: #e2c044 solid 3px;
 }
 
-.navbar-toggler-icon {
-    color: #ffffff;
+.navbar-dark .navbar-toggler {
+    border-color: transparent;
 }
 
 @media (max-width: 1200px) {
@@ -153,6 +153,7 @@ nav.navbar.navbar-view-static {
     
     nav.navbar.navbar-view-static {
         padding: 0 16px;
+        height: auto;
     }
     
     .navbar-brand.navbar-brand.navbar-view-blend {
@@ -164,7 +165,7 @@ nav.navbar.navbar-view-static {
     }
     
     .navbar-brand.navbar-brand.navbar-view-static {
-        font-size: 14px;
+        font-size: 16px;
         margin-right: 4px;
     }
     
@@ -186,6 +187,14 @@ nav.navbar.navbar-view-static {
 
     .navbar-view-blend .navbar-nav .nav-item .nav-link {
         color: transparent !important;
+    }
+}
+
+@media (max-width: 380px) {
+
+    .navbar-brand.navbar-brand.navbar-view-static #navbar-brand-text {
+        visibility: hidden;
+        font-size: 8px;
     }
 }
 
